<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/selector_home_icon"/>

    <item android:id="@+id/whishlishFragment"
        android:title="@string/whishlist"
        android:icon="@drawable/selector_wishlist_icon"/>

    <item android:id="@+id/scanFragment"
        android:title="@string/scan"
        android:icon="@drawable/selector_scan_icon"
        />

    <item android:id="@+id/collectionFragment"
        android:title="@string/collection"
        android:icon="@drawable/selector_collection_icon"/>

    <item android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/selector_profile_icon"/>

</menu>