<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.home.HomeFragment">


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/main_cardview"
            app:cardElevation="-20dp"
            app:circularflow_defaultRadius="@dimen/cardview_compat_inset_shadow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background"
                >
                <TextView
                    android:id="@+id/tv_dashboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginStart="16dp"
                    android:text="@string/my_dashboard"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="@id/iv_person"
                    app:layout_constraintBottom_toBottomOf="@id/iv_person"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <ImageView
                    android:id="@+id/iv_person"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_pic"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/img_bg_color"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <TextView
                    android:id="@+id/tv_coin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/coin"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:background="@drawable/text_bg"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="@id/iv_person"
                    app:layout_constraintStart_toStartOf="@id/iv_person"
                    app:layout_constraintBottom_toBottomOf="@id/iv_person"/>
                <ImageView
                    android:id="@+id/iv_message"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@drawable/ic_new_message"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toTopOf="@id/iv_person"
                    app:layout_constraintBottom_toBottomOf="@id/iv_person"
                    app:layout_constraintEnd_toStartOf="@id/iv_person"
                    />
                <TextView
                    android:id="@+id/tv_message_unread_count"
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:background="@drawable/blue_circle"
                    android:padding="2dp"
                    android:textColor="@color/white"
                    android:textSize="10dp"
                    app:layout_constraintEnd_toEndOf="@id/iv_message"
                    app:layout_constraintTop_toTopOf="@id/iv_message" />

                <ImageView
                    android:id="@+id/iv_notification"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@drawable/ic_notification"
                    android:layout_marginEnd="8dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintTop_toTopOf="@id/iv_message"
                    app:layout_constraintBottom_toBottomOf="@id/iv_message"
                    app:layout_constraintEnd_toStartOf="@id/iv_message"
                    />
                <TextView
                    android:id="@+id/tv_notification_unread_count"
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:background="@drawable/blue_circle"
                    android:padding="2dp"
                    android:textColor="@color/white"
                    android:textSize="10dp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="@id/iv_notification"
                    app:layout_constraintTop_toTopOf="@id/iv_notification" />
                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    app:layout_constraintTop_toTopOf="@id/iv_message"
                    app:layout_constraintBottom_toBottomOf="@id/iv_message"
                    android:layout_marginEnd="8dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_search"
                    app:layout_constraintEnd_toStartOf="@id/iv_notification"/>

                <View
                    android:id="@+id/view_scan"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="48dp"
                    android:background="@drawable/bg_rounded_card"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_coin"
                    app:layout_constraintEnd_toStartOf="@id/view_sell"
                    app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                    android:id="@+id/scanTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/scan"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@id/view_scan"
                    app:layout_constraintStart_toStartOf="@id/view_scan"/>
                <TextView
                    android:id="@+id/scanDescTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_desc"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="@id/view_scan"
                    app:layout_constraintTop_toBottomOf="@id/scanTv"
                    app:layout_constraintEnd_toStartOf="@id/arrow_scan"
                    app:layout_constraintStart_toStartOf="@id/scanTv"/>
                <ImageView
                    android:id="@+id/arrow_scan"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="16dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_arrow_forward"
                    app:layout_constraintEnd_toEndOf="@id/view_scan"
                    app:layout_constraintTop_toTopOf="@+id/scanTv"
                    app:layout_constraintBottom_toBottomOf="@id/scanTv"/>
                <View
                    android:id="@+id/view_sell"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_rounded_card"
                    app:layout_constraintBottom_toBottomOf="@id/view_scan"
                    app:layout_constraintTop_toTopOf="@+id/view_scan"
                    app:layout_constraintStart_toEndOf="@id/view_scan"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <TextView
                    android:id="@+id/sellTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sell"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@id/view_sell"
                    app:layout_constraintStart_toStartOf="@id/view_sell"/>
                <TextView
                    android:id="@+id/sellDescTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_desc"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@id/view_sell"
                    app:layout_constraintTop_toBottomOf="@id/sellTv"
                    app:layout_constraintEnd_toStartOf="@id/arrow_sell"
                    app:layout_constraintStart_toStartOf="@id/sellTv"/>
                <ImageView
                    android:id="@+id/arrow_sell"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="16dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_arrow_forward"
                    app:layout_constraintEnd_toEndOf="@id/view_sell"
                    app:layout_constraintTop_toTopOf="@+id/sellTv"
                    app:layout_constraintBottom_toBottomOf="@id/scanTv"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_available_to_buy"
            app:layout_constraintTop_toBottomOf="@+id/main_cardview"
            android:layout_marginTop="32dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/avail_to_buy"
            android:textColor="@color/avial_to_buy_text_color"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_see_all"
            app:layout_constraintTop_toTopOf="@+id/tv_available_to_buy"
            app:layout_constraintBottom_toBottomOf="@+id/tv_available_to_buy"
            android:text="@string/see_all"
            android:textSize="22sp"
            android:textColor="@color/see_all_color"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#eeeffe"
            app:layout_constraintStart_toStartOf="@id/tv_see_all"
            app:layout_constraintEnd_toEndOf="@id/tv_see_all"
            app:layout_constraintTop_toBottomOf="@id/tv_see_all"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_item"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:spanCount="3"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_available_to_buy"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/row_item"
            >

        </androidx.recyclerview.widget.RecyclerView>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressbar"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/rv_item"
            app:layout_constraintBottom_toBottomOf="@id/rv_item"
            app:layout_constraintStart_toStartOf="@id/rv_item"
            app:layout_constraintEnd_toEndOf="@id/rv_item"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>